--- a/src/out_patients/modules/billing/submodules/online-op-bills/online-op-bills.component.scss
+++ b/src/out_patients/modules/billing/submodules/online-op-bills/online-op-bills.component.scss
@@ -1,45 +1,42 @@
-.bg-grey{
-    background:#F6F6F6;
+.bg-grey {
+    background: #F6F6F6;
 }
-.bg-lightgrey{
+
+.bg-lightgrey {
     background-color: #D2D0D0;
 }
-.clr-primary{
+
+.clr-primary {
     color: #004084;
 }
-.bg-white{
+
+.bg-white {
     background-color: #fff;
     color: #000;
 }
 
-::ng-deep .mat-form-field-wrapper{
-
+::ng-deep .mat-form-field-wrapper {
     padding-bottom: 0 !important;
-
 }
 
-.serachcss{
-    position: relative !important;    
+.serachcss {
+    position: relative !important;
 }
 
-.iconcss{
-    ::ng-deep{
-        position: absolute !important;
-        padding-top: 1% !important;
-        padding-left: 1% !important;       
-        border-radius: 4px !important;
-        left:1px !important;
-    }
-  
-}
-
-.iconcss{
-    ::ng-deep{
+.iconcss {
+    ::ng-deep {
         position: absolute !important;
         padding: 1px !important;
         border-radius: 4px !important;
         left: 1px !important;
     }
-  
+
 }
 
+.onlineoptable{
+    ::ng-deep .max-table-wrapper{
+        border-radius: 0.75rem;
+        border: 1px solid #707070 !important;
+    }
+}
+   
